--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -343,8 +343,22 @@ doi = {10.3115/1073083.1073135}
 
 @misc{
 	clang,
+	
 	note = "\url{https://clang.llvm.org/}"
 }
+
+@misc{
+	javac,
+	title = {javac - Java programming language compiler},
+	url = {https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html}
+}
+
+@misc{
+	gcc,
+	title = {GCC, the GNU Compiler Collection},
+	url = {https://gcc.gnu.org/}
+}
+
 
 @misc{
 	malware_increase,
@@ -424,5 +438,13 @@ doi = {10.3115/1073083.1073135}
   url={https://www.sans.org/reading-room/whitepapers/malicious/malware-analysis-introduction-2103},
 }
 
-
+@inproceedings{
+	decompile_hard_java,
+  title={Decompiling Java bytecode: Problems, traps and pitfalls},
+  author={Miecznikowski, Jerome and Hendren, Laurie},
+  booktitle={International Conference on Compiler Construction},
+  pages={111--127},
+  year={2002},
+  organization={Springer}
+}
 
