--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -326,25 +326,26 @@ doi = {10.3115/1073083.1073135}
 
 @misc{
 	github,
-	note = "\url{https://github.com/}"
+	title = {GitHub},
+	url = {https://github.com/}
 }
 
 @misc{
 	snowman,
 	title = {Snowman decompiler},
-	note = "\url{https://derevenets.com/}"
+	url = {https://derevenets.com/}
 }
 
 @misc{
 	REC,
 	title = {REC Studio 4 - Reverse Engineering Compiler},
-	note = "\url{http://www.backerstreet.com/rec/rec.htm}"
+	url = {http://www.backerstreet.com/rec/rec.htm}
 }
 
 @misc{
 	clang,
-	
-	note = "\url{https://clang.llvm.org/}"
+	title = {Clang: a C language family frontend for LLVM},
+	url = {https://clang.llvm.org/}
 }
 
 @misc{
@@ -362,8 +363,8 @@ doi = {10.3115/1073083.1073135}
 
 @misc{
 	malware_increase,
-	author = {AV-TEST,Institute},
-	note = "\url{https://www.av-test.org/en/statistics/malware/}"
+	author = {AV-TEST Institute},
+	url = {https://www.av-test.org/en/statistics/malware/}
 }
 
 @misc{
@@ -372,7 +373,7 @@ doi = {10.3115/1073083.1073135}
 	institute = {Hex-Rays SA},
 	author = {Ilfak, Guilfanov},
 	year = {2008},
-	note = "\url{https://www.hex-rays.com/products/ida/support/ppt/decompilers_and_beyond_white_paper.pdf}"
+	url = {https://www.hex-rays.com/products/ida/support/ppt/decompilers_and_beyond_white_paper.pdf}
 }
 
 @inproceedings{
@@ -388,7 +389,13 @@ doi = {10.3115/1073083.1073135}
 @misc{
 	pycparser,
 	title = {pycparser},
-	note = "\url{https://github.com/eliben/pycparser}"
+	url = {https://github.com/eliben/pycparser}
+}
+
+@misc{
+	chainer,
+	title = {Chainer}, 
+	url = {https://chainer.org/}
 }
 
 @inproceedings{
