--- a/texs/paper_base.tex
+++ b/texs/paper_base.tex
@@ -3,8 +3,8 @@
 %\usepackage{graphicx}% 必要に応じて
 %\usepackage{mysettings}% 自分用設定
 %-------------------
-\etitle{Neural Network based Decompiler for automatically recovering source codes from compiled binary data}
-\jtitle{ニューラルネットを用いた逆コンパイラに}
+\etitle{Neural Network based Decompiler and its Evaluation}
+\jtitle{ニューラルネットを用いた逆コンパイラとその評価}
 
 __NAMES__
 
@@ -785,7 +785,7 @@ This seems to be due to the length of the sequences to be estimated.
 
 \begin{figure}[]
 	\includegraphics[width=12cm]{c_lens.png}
-	\caption{Length distribution of C token flagments}
+	\caption{Length distribution of C token fragments}
 	\label{fig:csizes}
 	\includegraphics[width=12cm]{ast_lens.png}
 	\caption{Length distribution of datasets as AST}
