--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -455,3 +455,15 @@ doi = {10.3115/1073083.1073135}
   organization={Springer}
 }
 
+@inproceedings{
+	levensthein_dist,
+  title={Binary codes capable of correcting deletions, insertions, and reversals},
+  author={Levenshtein, Vladimir I},
+  booktitle={Soviet physics doklady},
+  volume={10},
+  number={8},
+  pages={707--710},
+  year={1966}
+}
+
+
